fix solution for 05-lection3/02-modal что бы не прыгал контент, при overflow:hidden добавляем полоску размером 17px (возможно "не прыгать" будет толкько у пользователей chrome под 10й виндой)

--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -121,4 +121,5 @@
 }
 ._overflow\:hidden {
   overflow: hidden;
+  border-right: 17px solid transparent;
 }
